# python_floorplan_generator

./: __main__.py  lower_class_rooms.json  middle_class_rooms.json  pyproject.toml  readme.md  upper_class_rooms.json
.github/workflows/: pylint.yml
lib/: __init__ copy.py
lib/data/: Building.py  Floor.py  Metadata.py  Room.py  Size.py
lib/store/: __init__.py
test/: building_test.py  floor_test.py  room_test.py
