[tool.poetry]
name = "floor-plan-generator"
version = "0.1.0"
description = "A Victorian house floor plan generator."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
shapely = "^2.0.0"
matplotlib = "^3.7.0"
networkx = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
